--- a/src/main.html
+++ b/src/main.html
@@ -30,6 +30,23 @@
         </ul>
     </nav>
 </header>
+
+<footer class="Footer container">
+    <nav class="Footer-Navigation">
+        <ul class="FooterNav">
+            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">Support</a></li>
+            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">Callback</a></li>
+            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">For Develepors</a></li>
+            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">Usage conditions</a></li>
+        </ul>
+    </nav>
+
+    <div class="Footer-Copyrights">
+        <span class="Footer-CopyrightsYear">&copy;2001-2017</span>
+        <a href="http://yandex.ru" class="Footer-CopyrightsLink">LTD <span class="yandexFL">"Yandex"</span></a>
+    </div>
+</footer>
+
 <script src="main.js"></script>
 </body>
 </html>
