--- a/src/main.html
+++ b/src/main.html
@@ -17,27 +17,70 @@
     </div>
 
     <nav class="Header-Navigation">
-        <ul class="HeaderNav">
-            <li class="HeaderNav-Item HeaderNav-Item--active">
-                <a href="#" class="HeaderNav-Link">Сводка</a>
+        <ul class="Nav">
+            <li class="Nav-Item Nav-Item--active">
+                <a href="#" class="Nav-Link">Сводка</a>
             </li>
-            <li class="HeaderNav-Item">
-                <a href="#" class="HeaderNav-Link">Gadgets</a>
+            <li class="Nav-Item">
+                <a href="#" class="Nav-Link">Gadgets</a>
             </li>
-            <li class="HeaderNav-Item">
-                <a href="#" class="HeaderNav-Link">Scenarios</a>
+            <li class="Nav-Item">
+                <a href="#" class="Nav-Link">Scenarios</a>
             </li>
         </ul>
     </nav>
 </header>
 
+
+<section class="Content container">
+    <section class="MainContent">
+        <h2 class="MainContent-Title">Summary</h2>
+        <div class="MainContent-Wrap">
+            <div class="MainContent-Summary">
+                <p class="MainContent-Greeting">Hello, Harry</p>
+                <p class="MainContent-Brief">doors and windows are unlocked, alarm is active</p>
+                <div class="MainContent-Weather">
+                    <div class="MainContent-WeatherInside">
+                        <span class="MainContent-WeatherTitle">Дома</span>
+                        <br>
+                        <span class="MainContent-WeatherTemperature">+23</span>
+                    </div>
+                    <div class="MainContent-WeatherOutside">
+                        <span class="MainContent-WeatherTitle">На улице</span>
+                        <br>
+                        <span class="MainContent-WeatherTemperature">+19</span>
+                        <!--<span class="MainContent-WeatherIco"></span>-->
+                        <!--todo: поправить фон cloud-drizzle.svg и возможно других иконок-->
+                        <img class="MainContent-WeatherIco" src="../guide/assets/cloud-drizzle.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="MainContent-Top">
+                <div class="Card">Gadget 1</div>
+                <div class="Card">Gadget2</div>
+                <div class="Card">Gadget-3</div>
+            </div>
+        </div>
+    </section>
+    <section class="FavoriteScenarios">
+        <div class="FavoriteScenarios-Header">
+            <h2 class="FavoriteScenarios-Title">Favorite Scenarios</h2>
+            <nav class="FavoriteScenarios-Nav Nav">
+                <div class="Nav-Item"><a href="#" class="Nav-Link">сюда</a></div>
+                <div class="Nav-Item Nav-Item--active"><a href="#" class="Nav-Link">туда</a></div>
+            </nav>
+        </div>
+    </section>
+</section>
+
+
 <footer class="Footer container">
     <nav class="Footer-Navigation">
-        <ul class="FooterNav">
-            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">Support</a></li>
-            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">Callback</a></li>
-            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">For Develepors</a></li>
-            <li class="FooterNav-Item"><a href="#" class="FooterNav-Link">Usage conditions</a></li>
+        <ul class="Nav">
+            <li class="Nav-Item"><a href="#" class="Nav-Link">Support</a></li>
+            <li class="Nav-Item"><a href="#" class="Nav-Link">Callback</a></li>
+            <li class="Nav-Item"><a href="#" class="Nav-Link">For Developers</a></li>
+            <li class="Nav-Item"><a href="#" class="Nav-Link">Usage conditions</a></li>
         </ul>
     </nav>
 
