Top in MainContent section Cards

--- a/src/main.html
+++ b/src/main.html
@@ -49,16 +49,49 @@
                         <span class="MainContent-WeatherTitle">На улице</span>
                         <br>
                         <span class="MainContent-WeatherTemperature">+19</span>
-                        <!--<span class="MainContent-WeatherIco"></span>-->
+                        <span class="MainContent-WeatherIco"></span>
                         <!--todo: поправить фон cloud-drizzle.svg и возможно других иконок-->
-                        <img class="MainContent-WeatherIco" src="../guide/assets/cloud-drizzle.svg" alt="">
+                        <!--<img class="MainContent-WeatherIco" src="../guide/assets/cloud-drizzle.svg" alt="">-->
                     </div>
                 </div>
             </div>
             <div class="MainContent-Top">
-                <div class="Card">Gadget 1</div>
-                <div class="Card">Gadget2</div>
-                <div class="Card">Gadget-3</div>
+                <div class="Card">
+                    <div class="Card-Pictogram">
+                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                    </div>
+                    <div class="Card-Content">
+                        <div class="Card-Title">Philips Cooler</div>
+                        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                    <div class="Card-Content">
+                        <div class="Card-Title">Philips Cooler</div>
+                        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                    <div class="Card-Content">
+                        <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb</div>
+                        <div class="Card-SubTitle">Включится в 17:00</div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                    <div class="Card-Content">
+                        <div class="Card-Title">Philips Cooler</div>
+                        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
