Card:hover, Scenarios section

--- a/src/main.html
+++ b/src/main.html
@@ -99,9 +99,101 @@
         <div class="FavoriteScenarios-Header">
             <h2 class="FavoriteScenarios-Title">Favorite Scenarios</h2>
             <nav class="FavoriteScenarios-Nav Nav">
-                <div class="Nav-Item"><a href="#" class="Nav-Link">сюда</a></div>
-                <div class="Nav-Item Nav-Item--active"><a href="#" class="Nav-Link">туда</a></div>
+                <div class="Nav-Item"><a href="#" class="Nav-Link linkBack"></a></div>
+                <div class="Nav-Item Nav-Item--active"><a href="#" class="Nav-Link linkForward"></a></div>
             </nav>
+        </div>
+        <div class="FavoriteScenarios-Content">
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
+            <div class="Card">
+                <div class="Card-Pictogram">
+                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                </div>
+                <div class="Card-Content">
+                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                </div>
+            </div>
         </div>
     </section>
 </section>
