body -> grid layout; Favorite gadgets section base layout

--- a/src/main.html
+++ b/src/main.html
@@ -67,8 +67,8 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
-                </div>
+                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                    </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
                         <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
@@ -76,8 +76,26 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                    </div>
+                    <div class="Card-Content">
+                        <div class="Card-Title">Philips Cooler</div>
+                        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                    </div>
                 </div>
+                <div class="Card">
+                    <div class="Card-Pictogram">
+                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                    </div>
+                    <div class="Card-Content">
+                        <div class="Card-Title">Philips Cooler</div>
+                        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                    </div>
+                </div>
+                <div class="Card">
+                    <div class="Card-Pictogram">
+                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                    </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb</div>
                         <div class="Card-SubTitle">Включится в 17:00</div>
@@ -85,8 +103,8 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
-                </div>
+                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                    </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
                         <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
@@ -127,7 +145,7 @@
                     <img src="../guide/assets/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
-                    <div class="Card-Title">Philips Cooler</div>
+                    <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Xiaomi Yeelight LED Smart Bulb</div>
                     <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
                 </div>
             </div>
@@ -146,7 +164,7 @@
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
-                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+                    <div class="Card-SubTitle"></div>
                 </div>
             </div>
             <div class="Card">
@@ -196,6 +214,73 @@
             </div>
         </div>
     </section>
+</section>
+
+<section class="FavoriteGadgets container">
+    <div class="FavoriteGadgets-Header">
+        <div class="FavoriteGadgets-TitleWrap">
+            <div class="FavoriteGadgets-Title">JLjlj</div>
+            <div class="FavoriteGadgets-Tags">
+                <div class="FavoriteGadgets-Tag">sdf</div>
+                <div class="FavoriteGadgets-Tag">sdf</div>
+                <div class="FavoriteGadgets-Tag">sdf</div>
+                <div class="FavoriteGadgets-Tag">sdf</div>
+                <div class="FavoriteGadgets-Tag">sdf</div>
+            </div>
+        </div>
+        <nav class="FavoriteGadgets-Nav Nav">
+            <div class="Nav-Item"><a href="#" class="Nav-Link linkBack"></a></div>
+            <div class="Nav-Item Nav-Item--active"><a href="#" class="Nav-Link linkForward"></a></div>
+        </nav>
+    </div>
+    <div class="FavoriteGadgets-Content">
+        <div class="Card">
+            <div class="Card-Pictogram">
+                <img src="../guide/assets/icon_temperature.svg" alt="">
+            </div>
+            <div class="Card-Content">
+                <div class="Card-Title">Philips Cooler</div>
+                <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            </div>
+        </div>
+        <div class="Card">
+            <div class="Card-Pictogram">
+                <img src="../guide/assets/icon_temperature.svg" alt="">
+            </div>
+            <div class="Card-Content">
+                <div class="Card-Title">Philips Cooler</div>
+                <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            </div>
+        </div>
+        <div class="Card">
+            <div class="Card-Pictogram">
+                <img src="../guide/assets/icon_temperature.svg" alt="">
+            </div>
+            <div class="Card-Content">
+                <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb</div>
+                <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            </div>
+        </div>
+        <div class="Card">
+            <div class="Card-Pictogram">
+                <img src="../guide/assets/icon_temperature.svg" alt="">
+            </div>
+            <div class="Card-Content">
+                <div class="Card-Title">Philips Cooler</div>
+                <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            </div>
+        </div>
+        <div class="Card">
+            <div class="Card-Pictogram">
+                <img src="../guide/assets/icon_temperature.svg" alt="">
+            </div>
+            <div class="Card-Content">
+                <div class="Card-Title">Philips Cooler</div>
+                <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            </div>
+        </div>
+
+    </div>
 </section>
 
 
