Footer title, tags, cards. Some fixes Content section

--- a/src/main.html
+++ b/src/main.html
@@ -219,13 +219,13 @@
 <section class="FavoriteGadgets container">
     <div class="FavoriteGadgets-Header">
         <div class="FavoriteGadgets-TitleWrap">
-            <div class="FavoriteGadgets-Title">JLjlj</div>
+            <div class="FavoriteGadgets-Title">Избранные устройства</div>
             <div class="FavoriteGadgets-Tags">
-                <div class="FavoriteGadgets-Tag">sdf</div>
-                <div class="FavoriteGadgets-Tag">sdf</div>
-                <div class="FavoriteGadgets-Tag">sdf</div>
-                <div class="FavoriteGadgets-Tag">sdf</div>
-                <div class="FavoriteGadgets-Tag">sdf</div>
+                <div class="FavoriteGadgets-Tag FavoriteGadgets-Tag--active">Все</div>
+                <div class="FavoriteGadgets-Tag">Кухня</div>
+                <div class="FavoriteGadgets-Tag">Зал</div>
+                <div class="FavoriteGadgets-Tag">Лампочки</div>
+                <div class="FavoriteGadgets-Tag">Камеры</div>
             </div>
         </div>
         <nav class="FavoriteGadgets-Nav Nav">
@@ -234,7 +234,7 @@
         </nav>
     </div>
     <div class="FavoriteGadgets-Content">
-        <div class="Card">
+        <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
                 <img src="../guide/assets/icon_temperature.svg" alt="">
             </div>
@@ -243,7 +243,7 @@
                 <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
             </div>
         </div>
-        <div class="Card">
+        <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
                 <img src="../guide/assets/icon_temperature.svg" alt="">
             </div>
@@ -252,7 +252,7 @@
                 <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
             </div>
         </div>
-        <div class="Card">
+        <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
                 <img src="../guide/assets/icon_temperature.svg" alt="">
             </div>
@@ -261,7 +261,7 @@
                 <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
             </div>
         </div>
-        <div class="Card">
+        <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
                 <img src="../guide/assets/icon_temperature.svg" alt="">
             </div>
@@ -270,7 +270,7 @@
                 <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
             </div>
         </div>
-        <div class="Card">
+        <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
                 <img src="../guide/assets/icon_temperature.svg" alt="">
             </div>
