reorganize file structure, Some minor fixes

--- a/src/main.html
+++ b/src/main.html
@@ -6,11 +6,12 @@
           content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=0.5">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Умный Яндекс.Дом</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 <header class="Header container">
     <div class="Header-LogoBox">
-        <a href="#" class="Header-LogoLink"><img src="../Яндекс Дом.svg"
+        <a href="#" class="Header-LogoLink"><img src="./img/logo/Яндекс Дом.svg"
                                                  alt="Главный Логотип - переход на домашнюю страницу"
                                                  class="Header-Logo">
         </a>
@@ -51,14 +52,14 @@
                         <span class="MainContent-WeatherTemperature">+19</span>
                         <span class="MainContent-WeatherIco"></span>
                         <!--todo: поправить фон cloud-drizzle.svg и возможно других иконок-->
-                        <!--<img class="MainContent-WeatherIco" src="../guide/assets/cloud-drizzle.svg" alt="">-->
+                        <!--<img class="MainContent-WeatherIco" src="./img/icons/cloud-drizzle.svg" alt="">-->
                     </div>
                 </div>
             </div>
             <div class="MainContent-Top">
                 <div class="Card">
                     <div class="Card-Pictogram">
-                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="./img/icons/icon_temperature.svg" alt="">
                     </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
@@ -67,7 +68,7 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="./img/icons/icon_temperature.svg" alt="">
                     </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
@@ -76,7 +77,7 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="./img/icons/icon_temperature.svg" alt="">
                     </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
@@ -85,7 +86,7 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="./img/icons/icon_temperature.svg" alt="">
                     </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
@@ -94,7 +95,7 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="./img/icons/icon_temperature.svg" alt="">
                     </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb</div>
@@ -103,7 +104,7 @@
                 </div>
                 <div class="Card">
                     <div class="Card-Pictogram">
-                        <img src="../guide/assets/icon_temperature.svg" alt="">
+                        <img src="./img/icons/icon_temperature.svg" alt="">
                     </div>
                     <div class="Card-Content">
                         <div class="Card-Title">Philips Cooler</div>
@@ -124,7 +125,7 @@
         <div class="FavoriteScenarios-Content">
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -133,7 +134,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -142,7 +143,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Xiaomi Yeelight LED Smart Bulb</div>
@@ -151,7 +152,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -160,7 +161,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -169,7 +170,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -178,7 +179,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -187,7 +188,7 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
@@ -196,22 +197,14 @@
             </div>
             <div class="Card">
                 <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
+                    <img src="./img/icons/icon_temperature.svg" alt="">
                 </div>
                 <div class="Card-Content">
                     <div class="Card-Title">Philips Cooler</div>
                     <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
                 </div>
             </div>
-            <div class="Card">
-                <div class="Card-Pictogram">
-                    <img src="../guide/assets/icon_temperature.svg" alt="">
-                </div>
-                <div class="Card-Content">
-                    <div class="Card-Title">Philips Cooler</div>
-                    <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
-                </div>
-            </div>
+
         </div>
     </section>
 </section>
@@ -236,7 +229,7 @@
     <div class="FavoriteGadgets-Content">
         <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
-                <img src="../guide/assets/icon_temperature.svg" alt="">
+                <img src="./img/icons/icon_temperature.svg" alt="">
             </div>
             <div class="Card-Content">
                 <div class="Card-Title">Philips Cooler</div>
@@ -245,7 +238,7 @@
         </div>
         <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
-                <img src="../guide/assets/icon_temperature.svg" alt="">
+                <img src="./img/icons/icon_temperature.svg" alt="">
             </div>
             <div class="Card-Content">
                 <div class="Card-Title">Philips Cooler</div>
@@ -254,16 +247,16 @@
         </div>
         <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
-                <img src="../guide/assets/icon_temperature.svg" alt="">
+                <img src="./img/icons/icon_temperature.svg" alt="">
             </div>
             <div class="Card-Content">
-                <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb</div>
+                <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Smart Bulb</div>
                 <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
             </div>
         </div>
         <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
-                <img src="../guide/assets/icon_temperature.svg" alt="">
+                <img src="./img/icons/icon_temperature.svg" alt="">
             </div>
             <div class="Card-Content">
                 <div class="Card-Title">Philips Cooler</div>
@@ -272,7 +265,16 @@
         </div>
         <div class="Card FavoriteGadgets-Card">
             <div class="Card-Pictogram">
-                <img src="../guide/assets/icon_temperature.svg" alt="">
+                <img src="./img/icons/icon_temperature.svg" alt="">
+            </div>
+            <div class="Card-Content">
+                <div class="Card-Title">Philips Cooler</div>
+                <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            </div>
+        </div>
+      <div class="Card FavoriteGadgets-Card">
+            <div class="Card-Pictogram">
+                <img src="./img/icons/icon_temperature.svg" alt="">
             </div>
             <div class="Card-Content">
                 <div class="Card-Title">Philips Cooler</div>
@@ -301,5 +303,8 @@
 </footer>
 
 <script src="main.js"></script>
+<script id="__bs_script__">//<![CDATA[
+document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.7'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
