common styles for screens less than 1000px and hamburger menu

--- a/src/main.html
+++ b/src/main.html
@@ -29,6 +29,7 @@
                 <a href="#" class="Nav-Link">Scenarios</a>
             </li>
         </ul>
+      <div class="Header-Hamburger"></div>
     </nav>
 </header>
 
