html and styles for full-screen card air temperature

--- a/src/main.html
+++ b/src/main.html
@@ -64,7 +64,7 @@
           </div>
           <div class="Card-Content">
             <div class="Card-Title">Philips Cooler</div>
-            <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
         <div class="Card">
@@ -73,7 +73,7 @@
           </div>
           <div class="Card-Content">
             <div class="Card-Title">Philips Cooler</div>
-            <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
         <div class="Card">
@@ -82,7 +82,7 @@
           </div>
           <div class="Card-Content">
             <div class="Card-Title">Philips Cooler</div>
-            <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
         <div class="Card">
@@ -91,7 +91,7 @@
           </div>
           <div class="Card-Content">
             <div class="Card-Title">Philips Cooler</div>
-            <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
         <div class="Card">
@@ -100,7 +100,7 @@
           </div>
           <div class="Card-Content">
             <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb</div>
-            <div class="Card-SubTitle">Включится в 17:00</div>
+            <div class="Card-Status">Включится в 17:00</div>
           </div>
         </div>
         <div class="Card">
@@ -109,7 +109,7 @@
           </div>
           <div class="Card-Content">
             <div class="Card-Title">Philips Cooler</div>
-            <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+            <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -139,7 +139,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -148,7 +148,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Xiaomi Yeelight LED Smart Bulb</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -157,7 +157,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -166,7 +166,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle"></div>
+          <div class="Card-Status"></div>
         </div>
       </div>
       <div class="Card">
@@ -175,7 +175,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -184,7 +184,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -193,7 +193,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
       <div class="Card">
@@ -202,7 +202,7 @@
         </div>
         <div class="Card-Content">
           <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+          <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
 
@@ -234,7 +234,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -243,7 +243,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -252,7 +252,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Smart Bulb</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -261,7 +261,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -270,7 +270,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -279,7 +279,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -288,7 +288,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
     <div class="Card FavoriteGadgets-Card">
@@ -297,7 +297,7 @@
       </div>
       <div class="Card-Content">
         <div class="Card-Title">Philips Cooler</div>
-        <div class="Card-SubTitle">Начнет охлаждать в 16:30</div>
+        <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
 
@@ -320,6 +320,44 @@
     <a href="http://yandex.ru" class="Footer-CopyrightsLink">LTD <span class="yandexFL">"Yandex"</span></a>
   </div>
 </footer>
+
+<div class="Card--fullScreen">
+  <div class="gadgetWrap">
+    <div class="gadget">
+      <div class="gadget-Header">
+        <div class="gadget-Title">
+          <span>HEADER TEXT</span>
+          <div class="gadget-Status">online</div>
+        </div>
+        <div class="gadget-Info">
+          <span class="gadget-InfoText">+22</span>
+          <div class="gadget-Icon">
+            <img src="./img/icons/icon_temperature.svg" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="gadget-Presets">
+        <span class="gadget-Variants active">manual</span>
+        <span class="gadget-Variants">cold</span>
+        <span class="gadget-Variants">warm</span>
+        <span class="gadget-Variants">hot</span>
+      </div>
+      <div class="gadget-SliderBox">
+        <div class="gadget-Limits">
+          <span class="gadget-LimitMin">-10</span>
+          <span class="gadget-LimitMax">+30</span>
+        </div>
+        <div class="gadget-Slider"></div>
+      </div>
+
+    </div>
+    <div class="gadget-ConfirmForm">
+      <button class="gadget-FormButtons active">apply</button>
+      <button class="gadget-FormButtons ">close</button>
+    </div>
+  </div>
+</div>
+</div>
 
 <script src="main.js"></script>
 <script id="__bs_script__">//<![CDATA[
